--- a/BPAs.html
+++ b/BPAs.html
@@ -7,6 +7,6 @@
     <title>Guía de Buenas Prácticas Agrícolas para el Cultuvo del Café</title>
 </head>
 <body>
-    <embed src="docs/GuiaBPAs.pdf" type="application/pdf"/>
+    <object data="docs/GuiaBPAs.pdf" type="application/pdf"></object>
 </body>
 </html>
