--- a/cultivo.html
+++ b/cultivo.html
@@ -7,6 +7,6 @@
     <title>Guía Técnica para el Cultivo del Café</title>
 </head>
 <body>
-    <embed src="docs/GuiaTecnica2020.pdf" type="application/pdf"/>
+    <object data="docs/GuiaTecnica2020.pdf" type="application/pdf"></object>
 </body>
 </html>
