--- a/suelos.html
+++ b/suelos.html
@@ -7,6 +7,6 @@
     <title>Hoja Divulgativa Suelos</title>
 </head>
 <body>
-    <embed id="imagenSuelos" src="docs/HojaDivulgativa 2024Suelo.png" type="image/png"/>
+    <object id="imagenSuelos" data="docs/HojaDivulgativa 2024Suelo.png" type="image/png"></object>
 </body>
 </html>
