--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="BPAs.html">Guía de Buenas Prácticas Agrícolas para el Cultuvo del Café</a>
+    <a href="BPAs.html">Guía de Buenas Prácticas Agrícolas para el Cultivo del Café</a>
     <br><br>
     <a href="cultivo.html">Guía Técnica para el Cultivo del Café</a>
     <br><br>
