--- a/cultivo.html
+++ b/cultivo.html
@@ -7,8 +7,6 @@
     <title>Guía Técnica para el Cultivo del Café</title>
 </head>
 <body>
-    <object data="docs/GuiaTecnica2020.pdf" type="application/pdf">
-        <embed src="https://icafe.sharepoint.com/sites/TEAMPROMOCIN-Documentosregionales/Documentos%20compartidos/Forms/AllItems.aspx?id=%2Fsites%2FTEAMPROMOCIN%2DDocumentosregionales%2FDocumentos%20compartidos%2FGuiaTecnica2020%2Epdf&parent=%2Fsites%2FTEAMPROMOCIN%2DDocumentosregionales%2FDocumentos%20compartidos&p=true&ga=1"/>
-    </object>
+    <object data="docs/GuiaTecnica2020.pdf" type="application/pdf"></object>
 </body>
 </html>
