--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="cultivo.html">Guía Técnica para el Cultivo del Café</a>
     <br><br>
     <a href="suelos.html">Hoja Divulgativa Suelos</a>  
+    <br><br>
+    <a href="enfermedades.html">Imagen Divulgativa Enfermedades</a>  
 </body>
 </html>
