--- a/BPAs.html
+++ b/BPAs.html
@@ -7,6 +7,8 @@
     <title>Guía de Buenas Prácticas Agrícolas para el Cultuvo del Café</title>
 </head>
 <body>
-    <object data="docs/GuiaBPAs.pdf" type="application/pdf"></object>
+    <object data="docs/GuiaBPAs.pdf" type="application/pdf">
+        <embed src="https://icafe.sharepoint.com/:b:/s/TEAMPROMOCIN-Documentosregionales/ET6iyPZ2QwFOogbcC0UWsl8BLtqbVO0L1Yf80pWKGkOJdQ?e=lqosvb"/>
+    </object>
 </body>
 </html>
