--- a/cultivo.html
+++ b/cultivo.html
@@ -7,6 +7,6 @@
     <title>Guía Técnica para el Cultivo del Café</title>
 </head>
 <body>
-        <embed src="https://icafe.sharepoint.com/:b:/s/TEAMPROMOCIN-Documentosregionales/EaY8FnIWmRxEllr8kb4tA8gBB2LxeOwARtzxBUx6mfLzUw?e=gefyIg"/>  
+    <object data="docs/GuiaTecnica2020.pdf" type="application/pdf"></object>
 </body>
 </html>
