--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="BPAs.html">Guía de Buenas Prácticas Agrícolas para el Cultivo del Café</a>
+    <a href="docs/GuiaBPAs.pdf">Guía de Buenas Prácticas Agrícolas para el Cultivo del Café</a>
     <br><br>
-    <a href="cultivo.html">Guía Técnica para el Cultivo del Café</a>
+    <a href="docs/GuiaTecnica2020.pdf">Guía Técnica para el Cultivo del Café</a>
     <br><br>
     <a href="suelos.html">Hoja Divulgativa Suelos</a>  
     <br><br>
